--- a/conferences.html
+++ b/conferences.html
@@ -165,6 +165,20 @@
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
+   <a href="https://sites.google.com/view/macaulay2tulane/">Macaulay2 Workshop</a>,
+   Tulane University,
+   14  &ndash; 18 April 2025.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="https://sites.google.com/view/combinatexas2025/home">CombinaTexas 2025</a>,
+   Texas A&amp;M University,
+   12  &ndash; 13 April 2025.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
    <a href="conferences/TAGS25/index.html">Texas Algebraic Geometry Symposium</a>,
    Texas A&amp;M University,
    28  &ndash; 30 March 2025.<br>
@@ -198,22 +212,6 @@
    31 January&ndash;2 February 2025.
    Texas A&amp;M University.
  </li>  
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
-  <li> AMS Special session on
-    <a href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_program_ss17.html">Applications of Algebraic Geometry</a>,
-    <a href="http://www.ams.org/meetings/"></a>Joint Mathematical Meetings 11 January 2025,
-    Seattle.
-    Co-organizing with <a href=""></a>Timothy Duff, <a href=""></a> Jesse Loucks-Tavitas, and <a href=""></a>Taylor Brysiewicz.
- </li>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
-  <li> AMS Special session on
-    <a href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_program_ss79.html">Mathematics of Topological Insulators</a>,
-    <a href="http://www.ams.org/meetings/"></a>Joint Mathematical Meetings 10 January 2025,
-    Seattle.
-    Organized by Matthew Faust, Xiaowen Zhu, and Alexis Drouot.
- </li>
  <!---------------------------------------------------------------------------------------------------->
 </UL>
 
