--- a/talks.html
+++ b/talks.html
@@ -128,6 +128,13 @@
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
+    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    Algebraic Geometry Seminar, Stanford University, 14 March  2025.
+    <a href="talks/21/Discriminant.txt"></a>  
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+  <li>
     <font COLOR="AA00FF"><i></i>Participation Cancelled by TAMU</font>,
     <a href="http://www.ims.cuhk.edu.hk/activities/conferences/mist/2025/mist_workshop_12-18mar2025/">Schubert calculus and 
       related topics</a>, MIST 2025 Workshop, The Chinese University of Hong Kong, 12&ndash;18 March 2025.
@@ -140,6 +147,12 @@
     <a href="talks/21/Discriminant.txt">abstract</a>.  
    </li>
   <!--------------------------------------------------------------------------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+ <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The Critical Point Degree of a Periodic Graph</I></font>,
@@ -149,12 +162,6 @@
     <a href="talks/25/JMM_25.pdf">text of talk</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
- <!--------------------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
- <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The Critical Point Degree of a Bloch Variety</I></font>,
