--- a/teaching/25.1/RAGA.html
+++ b/teaching/25.1/RAGA.html
@@ -42,7 +42,7 @@
      <a href="http://www.math.tamu.edu/seminars/algebra_combinatorics/">Algebra and Combinatorics</a> (F) &nbsp; <br>
      are a good venue for catching faculty members, including Frank.</EM></FONT> 
    </TD>
-   <td rowspan=4 width=600pt valign=top><FONT SIZE=+1 color=880000><b>Content:</b></FONT> <br>
+   <td rowspan=2 width=600pt valign=top><FONT SIZE=+1 color=880000><b>Content:</b></FONT> <br>
      &nbsp; &nbsp;
 
      Real algebraic geometry is a fundamental input for many
@@ -69,7 +69,7 @@ possibly concurrent.
   </TD>
  </TR>
  <TR>
-   <TD colspan=2><FONT COLOR=AA00FF><EM>Sources:</EM></FONT>
+   <TD colspan=3><FONT COLOR=AA00FF><EM>Sources:</EM></FONT>
      <ul>
        <li> <a href="../../research/pdf/MMCS.pdf">Some geometrical aspects of control points for toric patches</a><br>
          Gheorghe Craciun, Luis Garcia, and Frank Sottile.
@@ -80,9 +80,20 @@ possibly concurrent.
              S Müller, E Feliu, G Regensburger, C Conradi, A Shiu, A Dickenstein<br>
               Foundations of Computational Mathematics 16 (1), 69-97 2016.
        </li>
-      <!-- https://arxiv.org/abs/2411.10776  Wronski Pairs of Honeycomb Curves -->
+       <li> <a href="../../research/pdf/MMCS.pdf">Some geometrical aspects of control points for toric patches</a><br>
+         Gheorghe Craciun, Luis Garcia, and Frank Sottile.
+       </li>
+<!-- https://arxiv.org/abs/2411.10776  Wronski Pairs of Honeycomb Curves -->
      </ul>
-   </TD>
+  </TD>
+   <td>
+     <ul>
+       <li>
+	 <a href="../../research/pdf/RealRoots.pdf">Real Solutions to Systems of Equations in Macaulay2</a> <br>
+       Jordy Lopez-Garc&iacute;a, Kelly Maluccio, Frank Sottile, and Thomas Yahl.
+       </li>
+     </ul>
+  </td>
  </TR>
  <!----------------->
  <!----------------->
@@ -150,7 +161,7 @@ possibly concurrent.
   <TD>
     <FONT SIZE=+1 COLOR=FF0000>Grading</FONT> <BR>
     We will have final projects on topics related to your research interests and the course material.
-    These will be presented at the end of the semester.
+    These will be presented at the end of the semester (28&ndash;30 April, to be scheduled).
     <!-------------------------------------------------->
    </TD>
  </TR>
@@ -159,7 +170,7 @@ possibly concurrent.
 
 <HR>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Sat Nov 16 18:31:44 CST 2024 by sottile</p>  
+<p>Last modified: Thu Jan 16 09:50:33 CST 2025 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
