--- a/conferences.html
+++ b/conferences.html
@@ -208,7 +208,7 @@
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
-   <a href="https://people.tamu.edu/~jml//symmetries-texas/main.html">Symmetries and Singularities in Texas</a>,
+   <a href="https://people.tamu.edu/~jml/symmetries-texas%203/main.html">Symmetries and Singularities in Texas</a>,
    31 January&ndash;2 February 2025.
    Texas A&amp;M University.
  </li>  
