--- a/conferences.html
+++ b/conferences.html
@@ -122,14 +122,46 @@
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>ICERM Semester, Metric Algebraic Geometry: Going Global, January&ndash;May 2027.
-   Organizers: P Breiding, S Di Rocco, J Kileel, K Kohn, A Lerario, C Meroni, J Rodriguez, A Seigal.
+   Organizers: P. Breiding, S. Di Rocco, J. Kileel, K. Kohn, A. Lerario, C. Meroni, J. Rodriguez, A. Seigal.
  </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>SL-Math two concurrent programs January&ndash;May 2027:<br>
-   New Trends in Tropical Geometry, Organizers: P Bousseau, M Chan, I Itenberg, H Markwig, K Shaw<br>
+   New Trends in Tropical Geometry,
+      Organizers: P. Bousseau, M. Chan, I. Itenberg, H. Markwig, K. Shaw<br>
    Algebraic Combinatorics, 
-      Organizers: S Billey, S Corteel, P Di Francesco, C Vinzant, L Williams.   
+      Organizers: S. Billey, S. Corteel, P. Di Francesco, C. Vinzant, L. Williams.   
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="https://mega.sciencesconf.org/"></a>FoCM 2026,
+   Vienna, 8  &ndash; 18 July 2026.
+   <a href="http://focm-society.org/">Webpage of the Foundations of Computational Mathematics</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="https://mega.sciencesconf.org/">MEGA 2026</a>
+   Durham, England, 6 &ndash; 10 July 2026.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="http://mate.dm.uba.ar/~coalaga/">Computational Algebra, Algebraic Geometry and Applications II</a>,
+     Buenos Aires, Argentina, December 15 &ndash; 17 2025.
+  </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="https://icerm.brown.edu/program/semester_program_workshop/sp-f25-w3">Computation in Representation Theory</a>,
+   ICERM, Providence, RI, 10 &ndash; 14 November 2025.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="https://mega.sciencesconf.org/"></a>Real Algebraic Geometry and Interactions (RAGI),
+   Universit&eacute;  Cote d'Azur, Nice, 6 &ndash; 10 October 2025.
  </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
@@ -138,13 +170,13 @@
       Algebraic Geometry (AG25)</a>,
    University of Wisconsin,
    7  &ndash; 11 July 2025.
-   <a href=" https://meetings.siam.org/sess/dsp_programsess.cfm?SESSIONCODE=82528">Preliminary Information about conference
+   <a href="https://meetings.siam.org/sess/dsp_programsess.cfm?SESSIONCODE=82528">Preliminary Information about conference
    program</a>.
  </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
-   <a href="https://sites.google.com/site/jakefillman/summer-school-2025">Texas A\&M Summer School in Mathematical Physics</a>,
+   <a href="https://sites.google.com/site/jakefillman/summer-school-2025">Texas A&amp;M Summer School in Mathematical Physics</a>,
    Texas A&amp;M University,
    16  &ndash; 20 June  2025.
  </li>
@@ -168,6 +200,13 @@
    <a href="https://sites.google.com/view/macaulay2tulane/">Macaulay2 Workshop</a>,
    Tulane University,
    14  &ndash; 18 April 2025.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="https://johndcobb.github.io/organizing/MAAG2025/">Meetings in Applied Algebraic Geometry 2025</a>,
+   Auburn University,
+   12  &ndash; 13 April 2025.
  </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
