--- a/conferences/TAGS25/index.html
+++ b/conferences/TAGS25/index.html
@@ -39,10 +39,10 @@
       <br><br> 
 
       <b>Speakers:</b><br>
-  &nbsp;  <a href="https://www.math.uga.edu/directory/people/pierrick-bousseau">Brendan Hassett</a>      &nbsp;
+  &nbsp;  <a href="https://www.math.brown.edu/bhassett/">Brendan Hassett</a>      &nbsp;
              Brown University <br>
  
-  &nbsp;  <a href="">Kimoi Kemboi</a>           &nbsp;
+  &nbsp;  <a href="https://kimoitoek.github.io/">Kimoi Kemboi</a>           &nbsp;
              Princeton University <br>    
 
   &nbsp;  <a href="https://lucasmasonbrown.com/">Lucas Mason-Brown</a>              &nbsp;
@@ -58,8 +58,8 @@
              Boston University <br>
 	    
  
-<!--  &nbsp; <a href="">Amy Huang</a>              &nbsp;
-                 Texas A&M University <br>    -->
+ &nbsp; <a href=""></a>Amy Huang              &nbsp;
+                 Texas A&amp;M University <br>  
  
    </td>
   </tr>
