--- a/advising/index.html
+++ b/advising/index.html
@@ -274,6 +274,13 @@
     <tr><td></td><td></td>
      <td>Postdoc at Michigan State University.</td> 
     </tr>
+    <tr>
+     <td>&nbsp;</td>
+     <td><A HREF="Faust.pdf"><IMG SRC="../images/pdf.gif"></A></td>
+     <td><font color="ff00ff"><i>Combinatorial Algebraic Geometry and Discrete Periodic Operators</i></font>,
+        Ph.D.&nbsp;Thesis.
+     </td>
+     </tr>
     </table>
    </li>
  <!------------------------------------------------------------------>
@@ -284,6 +291,13 @@
     <tr><td></td><td></td>
      <td>Van Vleck Postdoc at the University of Wisconsin Madison.</td> 
     </tr>
+    <tr>
+     <td>&nbsp;</td>
+     <td><<!--<A HREF="Faust.pdf"><IMG SRC="../images/pdf.gif">--></A></td>
+     <td><font color="ff00ff"><i>Computational Aspects of Galois Groups in Enumerative Geometry</i></font>,
+        Ph.D.&nbsp;Thesis.
+     </td>
+     </tr>
     </table>
    </li>
  <!-------------------- Number 10 ----------------------------------->
