--- a/conferences/TAGS25/index.html
+++ b/conferences/TAGS25/index.html
@@ -81,7 +81,9 @@
 <!----------------------------------------------------------------------------------------------------->
 <hr>
 <!----------------------------------------------------------------------------------------------------->
-<b><a href="https://docs.google.com/forms/d/e/1FAIpQLSeMhzQd98pwn7irgiobTw0N9eSFMovc9oXRZ7ijFKPrMztfDw/viewform"></a>Registration: TBA</b><br>
+<b><a href=" https://docs.google.com/forms/d/e/1FAIpQLSft_h_rNb3AcT33FCp7f9LS6KaarlBl6509EjhBolPRS7fhSQ/viewform">Registration:</a>
+  We have limited support for travel and hotels during the meeting.
+  Please register by <font color=red>February 28</font> to ensure full consideration for funding.</b><br>
 
 <b><a href="posters.html"></a>Poster Session:  </b> There will be a poster session for participants,
      with a prize for the best poster by a student or postdoc.<br>
