--- a/conferences/TAGS25/local.html
+++ b/conferences/TAGS25/local.html
@@ -7,9 +7,8 @@
 
 <!--------------------------------------------------------------------------------------------------->
  <a href="index.html"><h2>Texas Algebraic Geometry Symposium</h2></a><br>
- Texas A&amp;M University 28  &ndash; 30 March  2024.<br>
- <!---->
-<font color=red>Under Construction!</font><br>
+ Texas A&amp;M University 28  &ndash; 30 March  2025.<br>
+ <!--<font color=red>Under Construction!</font><br>--->
  
 <h3><font color=Maroon>Local Information</font></h3>
 
