--- a/conferences/index.html
+++ b/conferences/index.html
@@ -16,19 +16,39 @@
 <UL>
  <!---------------------------------------------------------------------------------------------------->
  <li>
+   <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/"></a>Numerical Algebraic Geometry and Correlated Electrons:
+   Generalized Grassmannians, Response Functions and Excited States,
+   Long program at the <a href="https://www.ipam.ucla.edu/">Institute for Pure and Applied Mathematics</a>, Spring 2027.
+   Organizers: Guido von Rudorff,
+   Fabian M. Faulstich,
+   Todd J. Mart&iacute;nez,
+   Frank Sottile,
+   Bernd Sturmfels,
+   Martin St&ouml;hr,
+   Julia Westermayr.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="https://mega.sciencesconf.org/">MEGA 2026</a>
+   Durham, England, 6 &ndash; 10 July 2026.  
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="http://www.fields.utoronto.ca/activities/24-25/commutative-algebra-applications">Commutative algebra and applications</a>.
+   With Shipman and Faust, we are organizing a short course and research experience on algebraic aspects of periodic operators.
+   26&ndash;30 May 2025.
+   Fields Institute Toronto.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
    <a href="TAGS25/index.html">Texas Algebraic Geometry Symposium</a>,
    Texas A&amp;M University,
    28  &ndash; 30 March 2025.<br>
    Supported by NSF grant DMS-2349244.
  </li>
- <!---------------------------------------------------------------------------------------------------->
-  <li> AMS Special session on
-    <a href="SanAntionio24/index.html"></a>Applications of Algebraic Geometry,
-    <a href="http://www.ams.org/meetings/"></a>Joint Mathematical Meetings 11 January 2025,
-    Seattle.
-    Co-organizing with <a href=""></a>Timothy Duff, <a href=""></a> Jesse Loucks-Tavitas, and <a href=""></a>Taylor Brysirwicz.
- </li>
- <!---------------------------------------------------------------------------------------------------->
 
  <!---------------------------------------------------------------------------------------------------->
 </ul>
@@ -37,6 +57,14 @@
 <!------------------------------------------------------------------------>
 <B><FONT SIZE=+1 color=brown>Conference organized for Frank Sottile</FONT></B>
 <ul>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+  <li> AMS Special session on
+    <a href="SanAntionio24/index.html"></a>Applications of Algebraic Geometry,
+    <a href="http://www.ams.org/meetings/"></a>Joint Mathematical Meetings 11 January 2025,
+    Seattle.
+    Co-organizing with <a href=""></a>Timothy Duff, <a href=""></a> Jesse Loucks-Tavitas, and <a href=""></a>Taylor Brysirwicz.
+ </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
