--- a/research/publications.html
+++ b/research/publications.html
@@ -87,7 +87,7 @@ Jump to     <A HREF="#manuscripts">accepted manuscripts</A>,
      <FONT COLOR="FF00FF"><I>Phase limit sets of linear spaces and discriminants</I></FONT>,  
       with <A HREF="http://www.math.tamu.edu/~nisse"></a>Mounir Nisse,   
        November 2024.
-<!--     <tt>arXiv.org/</tt>.  -->
+     <tt>arXiv.org/2411.19018</tt>. 
      </TD>
     </TR>  
    </TABLE>
@@ -112,7 +112,7 @@ Jump to     <A HREF="#manuscripts">accepted manuscripts</A>,
        <A HREF="https://bergeron.mathstats.yorku.ca/">Nantel Bergeron</A>,
        <A HREF="https://sites.google.com/view/l-colmenarejo/home">Laura Colmenarejo</A>, and 
        <A HREF="https://professeurs.uqam.ca/professeur/saliola.franco/">Franco Saliola</A>.
-       34 pages. <tt></tt>
+       34 pages. <tt>ArXiV.org/2406.05311</tt>
      </TD>
     </TR>
    </TABLE>
@@ -123,32 +123,6 @@ Jump to     <A HREF="#manuscripts">accepted manuscripts</A>,
 
 <!------------------------------------------------------------------------>
  <TR valign=CENTER><TD align=right>4
-                 </TD> <TD>
-   <!--------------------------------------------------------------->             
-   <!-------------      Version of March 2024     ------------------>
-   <!--------------------------------------------------------------->             
-   <TABLE><TR valign=center>
-     <TD><A HREF="pdf/NNLA.pdf"><IMG SRC="images/pdf.gif"></A></TD>
-     <TD><FONT COLOR="FF00FF">
-      <I>Numerical Nonlinear Algebra</I></FONT>,
-      with 
-       <A href="https://www.usna.edu/Users/math/dbates/index.php">Daniel Bates</a>,
-       <A href="http://www.paulbreiding.org">Paul Breiding</a>,
-       <A href="http://www.tianranchen.org">Tianran Chen</a>,
-       <A href="http://www.nd.edu/~jhauenst">Jonathan Hauenstein</a>, and 
-       <A href="https://antonleykin.math.gatech.edu/">Anton Leykin</a>.
-        <tt>arXiv.org/2302.08585</tt>.
-        In honor of Bernd Sturmfels on his 60th birthday.
-     </TD>
-    </TR>
-   </TABLE>
-<!--------------------------------------------------------------------->
-  </TD>
- </TR>
-<!------------------------------------------------------------------------>
-
-<!------------------------------------------------------------------------>
- <TR valign=CENTER><TD align=right>5
                  </TD> <TD>
 <!------------------------------------------------------------------------>
 <!-----------------        Version of 10 May 2021        ----------------->
@@ -175,7 +149,7 @@ Jump to     <A HREF="#manuscripts">accepted manuscripts</A>,
 <!------------------------------------------------------------------------>
 
 <!------------------------------------------------------------------------>
- <TR valign=CENTER><TD align=right>6
+ <TR valign=CENTER><TD align=right>5
                  </TD> <TD>
    <!--------------------------------------------------------------->             
    <!-------------      Version of August 2021     ----------------->
@@ -218,6 +192,34 @@ Jump to <A HREF="#preprints">preprints</A>,
 
 <TABLE>
 
+
+<!------------------------------------------------------------------------>
+ <TR valign=CENTER><TD align=right>6
+</TD> <TD>
+   <!--------------------------------------------------------------->             
+   <!-------------      Version of March 2024     ------------------>
+   <!--------------------------------------------------------------->             
+   <TABLE><TR valign=center>
+     <TD><A HREF="pdf/NNLA.pdf"><IMG SRC="images/pdf.gif"></A></TD>
+     <TD><FONT COLOR="FF00FF">
+      <I>Numerical Nonlinear Algebra</I></FONT>,
+      with 
+       <A href="https://www.usna.edu/Users/math/dbates/index.php">Daniel Bates</a>,
+       <A href="http://www.paulbreiding.org">Paul Breiding</a>,
+       <A href="http://www.tianranchen.org">Tianran Chen</a>,
+       <A href="http://www.nd.edu/~jhauenst">Jonathan Hauenstein</a>, and 
+       <A href="https://antonleykin.math.gatech.edu/">Anton Leykin</a>.
+        <tt>arXiv.org/2302.08585</tt>.
+        In honor of Bernd Sturmfels on his 60th birthday.
+         To appear in Combinatorial, Computational, and Applied Algebraic Geometry: A Tribute to Bernd Sturmfels,
+         Ed. by Serkan Hosten, Diane Maclagan, and Frank Sottile.
+     </TD>
+    </TR>
+   </TABLE>
+<!--------------------------------------------------------------------->
+  </TD>
+ </TR>
+<!------------------------------------------------------------------------>
 
 </TABLE>
 
