added new paper

--- a/research/collaborators.html
+++ b/research/collaborators.html
@@ -462,8 +462,8 @@ I have had the good fortune to work with the following mathematicians.
 <dd><img src="images/dots/one.png">
      <A HREF="http://www.math.tamu.edu/~shakalli">Jeanette Shakalli Tang</A>. 
 
-<!--  Toric-Fermi  -->
-<dd><IMG SRC="images/dots/vapourware.png">
+<!--  AAPGO 2025   Toric-Fermi  -->
+<dd><IMG SRC="images/dots/one.png">
     <A HREF="https://www.math.lsu.edu/~shipman/">Stephen Shipman</a>, Louisiana State University.
 
 <!-- flags 2006 -->
