--- a/conferences.html
+++ b/conferences.html
@@ -166,6 +166,14 @@
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
+   <a href="https://www.math.sci.hokudai.ac.jp/sympo/fpsac2025/">37th International Conference on Formal Power Series and Algebraic
+     Combinatorics (FPSAC 2025)</a>,
+   Hokkaido  University, Sapporo, Japan, 
+   21  &ndash; 25 July 2025.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
    <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/">SIAM Conference on Applied
       Algebraic Geometry (AG25)</a>,
    University of Wisconsin,
@@ -243,13 +251,6 @@
    <a href="https://www.math.ttu.edu/~lchriste/slam2025.html">Southwest Local Algebra Meeting (SLAM)</a>,
    1&ndash;2 March 2025.
    Arizona State University, Tempe Arizona.
- </li>  
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
- <li>
-   <a href="https://people.tamu.edu/~jml/symmetries-texas%203/main.html">Symmetries and Singularities in Texas</a>,
-   31 January&ndash;2 February 2025.
-   Texas A&amp;M University.
  </li>  
  <!---------------------------------------------------------------------------------------------------->
 </UL>
