--- a/conferences/index.html
+++ b/conferences/index.html
@@ -30,6 +30,13 @@
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
+   <a href="https://mega.sciencesconf.org/"></a>FoCM 2026,
+   Vienna, 8  &ndash; 18 July 2026.
+   <a href="http://focm-society.org/">Webpage of the Foundations of Computational Mathematics</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
    <a href="https://mega.sciencesconf.org/">MEGA 2026</a>
    Durham, England, 6 &ndash; 10 July 2026.  
  </li>
@@ -59,14 +66,6 @@
 <ul>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
-  <li> AMS Special session on
-    <a href="SanAntionio24/index.html"></a>Applications of Algebraic Geometry,
-    <a href="http://www.ams.org/meetings/"></a>Joint Mathematical Meetings 11 January 2025,
-    Seattle.
-    Co-organizing with <a href=""></a>Timothy Duff, <a href=""></a> Jesse Loucks-Tavitas, and <a href=""></a>Taylor Brysirwicz.
- </li>
- <!---------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
  <li>
    Conference on
    <a href="http://www.fields.utoronto.ca/activities/23-24/enumerative-geometry">Computational and Applied  Enumerative Geometry</a>, 
@@ -81,6 +80,14 @@
 <!------------------------------------------------------------------------>
 <B><FONT SIZE=+1 color=brown>Past organizing</FONT></B>
 <UL>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+  <li> AMS Special session on
+    <a href="SanAntionio24/index.html"></a>Applications of Algebraic Geometry,
+    <a href="http://www.ams.org/meetings/"></a>Joint Mathematical Meetings 11 January 2025,
+    Seattle.
+    Co-organizing with <a href=""></a>Timothy Duff, <a href=""></a> Jesse Loucks-Tavitas, and <a href=""></a>Taylor Brysirwicz.
+ </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
   <li> SIAM Minisymposium on Periodic Operators,
