--- a/teaching/25.1/RAGA.html
+++ b/teaching/25.1/RAGA.html
@@ -80,15 +80,8 @@ possibly concurrent.
              S Müller, E Feliu, G Regensburger, C Conradi, A Shiu, A Dickenstein<br>
               Foundations of Computational Mathematics 16 (1), 69-97 2016.
        </li>
-       <li> <a href="../../research/pdf/MMCS.pdf">Some geometrical aspects of control points for toric patches</a><br>
-         Gheorghe Craciun, Luis Garcia, and Frank Sottile.
-       </li>
 <!-- https://arxiv.org/abs/2411.10776  Wronski Pairs of Honeycomb Curves -->
-     </ul>
-  </TD>
-   <td>
-     <ul>
-       <li>
+      <li>
 	 <a href="../../research/pdf/RealRoots.pdf">Real Solutions to Systems of Equations in Macaulay2</a> <br>
        Jordy Lopez-Garc&iacute;a, Kelly Maluccio, Frank Sottile, and Thomas Yahl.
        </li>
@@ -104,6 +97,16 @@ possibly concurrent.
      <TT>https://franksottile.github.io/teaching/25.1/RAGA.html</TT></A>
   </TD>
  </TR>
+ <tr>
+   <td colspan=2>Suggested topics for presentations:<br>
+     Hilbert's 1888 Theorem on positivity and sums of squares</br>
+     Lax's discriminant of a symmetric matrix is a sum of squares</br>
+     Present Macaulay2 Package RealRoots.
+
+
+   </td>
+   
+ </tr> 
 </TABLE>
 
 <!-----
