--- a/conferences.html
+++ b/conferences.html
@@ -234,7 +234,7 @@
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
-   <a href="https://sites.google.com/view/24txla-ug-conference/"></a>Undergraduate Mathematics Conference,
+   <a href="https://sites.google.com/view/uh-lsu-tamu-umrc-2025">Undergraduate Mathematics Conference</a>,
    22&ndash;23 March 2025, University of Houston.
    <a href="https://sites.google.com/view/24txla-ug-conference/">Link to past conferences</a>.
  </li>  
