--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
       I am helping to organize a program at the <a href="https://www.ipam.ucla.edu/">IPAM</a>
       on <font color="AA00FF">Numerical Algebraic Geometry and Correlated Electrons:  Generalized Grassmannians, Response Functions and
-      Excited States</font>.  This will occur one of the two semesters in the academic year 2026&ndash;7.<br>
+      Excited States</font>.  This will occur from 8 March to 11 June 2027.<br>
       
       I am now the Director of Honors and Undergraduate Research for the Department of Mathematics.<br>
       
@@ -311,9 +311,9 @@
     <A HREF="http://www.siam.org/journals/siaga.php"><IMG
       SRC="images/siaga_2016.jpg" BORDER=2 height=130 ALT="SIAM J on Applied Algebra and Geometry"></A> 
         <A HREF="http://www.maa.org/publications/periodicals/american-mathematical-monthly"><IMG
-      SRC="images/amm_2014.jpg" BORDER=2 height=130 ALT="American Mathematical Monthly" ></A> 
-        <A HREF="https://armj.math.stonybrook.edu/"><IMG
-      SRC="images/arnold_24.webp" BORDER=2 height=130 ALT="Arnold Mathematical Journal" ></A> 
+      SRC="images/amm_2014.jpg" BORDER=2 height=130 ALT="American Mathematical Monthly"></A> 
+     <A HREF="https://armj.math.stonybrook.edu/"><IMG SRC="images/arnold_24.webp" BORDER=2 height=130 ALT="Arnold Mathematical Journal"></A> 
+     <A HREF="https://link.springer.com/journal/10208"><IMG SRC="images/FoCM_25.webp" BORDER=2 height=130 ALT="Journal of the Foundations of Computational Mathematics"></A> 
      </td>
    </tr>
    <!---------------------------------------------------------------------------->
