--- a/talks.html
+++ b/talks.html
@@ -128,23 +128,31 @@
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry</I></font>,
     Algebraic Geometry Seminar, Stanford University, 14 March  2025.
     <a href="talks/21/Discriminant.txt"></a>  
    </li>
   <!--------------------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
   <li>
-    <font COLOR="AA00FF"><i></i>Participation Cancelled by TAMU</font>,
-    <a href="http://www.ims.cuhk.edu.hk/activities/conferences/mist/2025/mist_workshop_12-18mar2025/">Schubert calculus and 
-      related topics</a>, MIST 2025 Workshop, The Chinese University of Hong Kong, 12&ndash;18 March 2025.
+    <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
+    Math Club, University of Hawaii,
+    12 March 2025.
+    <a href="talks/18/Shape.txt">Abstract</a>.
   </li>
-  <!-------------------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>The phase limit set of linear spaces and discriminants</I></font>,
-    Algebra and Combinatorics Seminar, Texas A&amp;M University, 24 January 2025.
-    <a href="talks/21/Discriminant.txt">abstract</a>.  
+    <FONT COLOR="AA00FF"><I>Galois Groups in Enumerative Geometry and Applications</I></font>,
+    Colloquium, University of Hawaii, 10 March 2025.  <a href="talks/24/Golden.txt">Abstract</a>
+  </li>
+  <!---------------------------------------------------------------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Periodic graph operators for algebraic geometers</I></font>,
+    Geometry Seminar, 28 February 2025.
+    Texas A&amp;M University.
+    <a href="talks/25/PGO4AG.txt">abstract</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
  <!--------------------------------------------------------------------------------------------------->
@@ -153,6 +161,13 @@
 <B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
 <ul>
  <!--------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>The phase limit set of linear spaces and discriminants</I></font>,
+    Algebra and Combinatorics Seminar, Texas A&amp;M University, 24 January 2025.
+    <a href="talks/21/Discriminant.txt">abstract</a>.  
+   </li>
+  <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The Critical Point Degree of a Periodic Graph</I></font>,
@@ -299,7 +314,7 @@
      Commutative Algebra/Algebraic Geometry Seminar, University of California, Berkeley, 19 March 2024.
       <a href="talks/24/WWSigns.txt">abstract</a>.
   </li>
-   <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
@@ -384,7 +399,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Sat Oct 26 09:43:48 PDT 2024 by sottile</p>  
+<p>Last modified: Wed Feb 26 17:51:15 CST 2025 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
