--- a/teaching/25.1/RAGA.html
+++ b/teaching/25.1/RAGA.html
@@ -86,7 +86,21 @@ possibly concurrent.
        Jordy Lopez-Garc&iacute;a, Kelly Maluccio, Frank Sottile, and Thomas Yahl.
        </li>
      </ul>
-  </td>
+   </td>
+   <td><FONT COLOR=AA00FF><EM>More:</EM></FONT>
+     <ul>
+       <li>  <a href="https://arxiv.org/pdf/1908.05503.pdf">Sign  Conditions for the  Existence  of  at  Least
+	   One Positive Solution of a Sparse Polynomial System</a>,
+	 Fr&eacute;d&eacute;ric Bihan, Alicia Dickenstein, and Magal&iacute; Giaroli.
+       </li>
+       <li> <a href="https://arxiv.org/pdf/1601.05826.pdf">Descartes' Rule of Signs for Polynomial Systems Supported on Circuits</a>,
+	  Fr&eacute;d&eacute;ric Bihan and Alicia Dickenstein.
+      </li>
+       <li> <a href="https://arxiv.org/pdf/2411.10776">Wronski Pairs of Honeycomb Curves</a>,
+	  Laura Casabella, Michael Joswig, Rafael Mohr.
+      </li>
+      </ul>
+   </td>
  </TR>
  <!----------------->
  <!----------------->
@@ -98,10 +112,11 @@ possibly concurrent.
   </TD>
  </TR>
  <tr>
-   <td colspan=2>Suggested topics for presentations:<br>
-     Hilbert's 1888 Theorem on positivity and sums of squares</br>
-     Lax's discriminant of a symmetric matrix is a sum of squares</br>
-     Present Macaulay2 Package RealRoots.
+   <td colspan=4>Suggested topics for presentations:<br>
+     Hilbert's 1888 Theorem on positivity and sums of squares.</br>
+     Lax's discriminant of a symmetric matrix is a sum of squares. &nbsp; &nbsp;   Pooja Joshi and Zeytoon  Kazemimoghaddam.</br>
+     Present Macaulay2 Package RealRoots.<br>
+     Multivariate generalizations of stability of univariate polynomials.
 
 
    </td>
@@ -128,6 +143,14 @@ possibly concurrent.
    </ul>
   </li>
   <!-------------------------------------------------->
+  <li><b>Bounds on numbers of solutions</b>  
+   <ul>
+     <li>Gale Duality for upper bounds</li>
+     <li>Lower bounds</li>
+     <li>Conditions for injectivity</li>
+  </ul>
+  </li>
+  <!-------------------------------------------------->
   <li><b>Positive polynomials</b>  
    <ul>
      <li>Positivity and sums of squares</li>
@@ -135,14 +158,6 @@ possibly concurrent.
      <li>Positivstellensatz</li>
      <li>Theorems of Polya, Handelman, Putinar, and Schmudgen</li>
    </ul>
-  </li>
-  <!-------------------------------------------------->
-  <li><b>Bounds on numbers of solutions</b>  
-   <ul>
-     <li>Gale Duality for upper bounds</li>
-     <li>Lower bounds</li>
-     <li>Conditions for injectivity</li>
-  </ul>
   </li>
   <!-------------------------------------------------->
   <li><b>Real Toric varieties</b>  
