--- a/teaching/25.1/RAGA.html
+++ b/teaching/25.1/RAGA.html
@@ -10,7 +10,10 @@
 <HR>
 <!---------------------------------------------------------------------------------------------------->
 <font size=+2 color=red>
-  To sign up for this and for Landsberg's Algebraic Geometry II (both MATH 666), you need to write Briana Hague and ask for a waiver.
+  Please consider attending the  <a href="../../conferences/TAGS25/index.html">Texas Algebraic Geometry Symposium</a>,
+  which will be held at TAMU Friday-Saturday-Sunday March
+ 28-30.
+ 
 </font>
 
 <!---------------------------------------------------------------------------------------------------->  
@@ -188,7 +191,7 @@ possibly concurrent.
 
 <HR>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Thu Jan 16 09:50:33 CST 2025 by sottile</p>  
+<p>Last modified: Thu Feb 27 07:57:38 CST 2025 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
